<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:paddingStart="12dp" android:paddingEnd="12dp" android:paddingBottom="10dp">
    <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar" style="@style/Widget.Trivox.Toolbar" android:layout_width="match_parent" android:layout_height="56dp" />
    <ScrollView android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:background="@drawable/panel_background" android:padding="12dp">
            <TextView style="@style/Widget.Trivox.FieldLabel" android:text="@string/remarks"/><EditText android:id="@+id/manualNameInput" style="@style/Widget.Trivox.Input" android:layout_marginTop="3dp"/>
            <TextView style="@style/Widget.Trivox.FieldLabel" android:layout_marginTop="9dp" android:text="@string/address"/><EditText android:id="@+id/manualAddressInput" style="@style/Widget.Trivox.Input" android:layout_marginTop="3dp" android:textDirection="ltr"/>
            <TextView style="@style/Widget.Trivox.FieldLabel" android:layout_marginTop="9dp" android:text="@string/port"/><EditText android:id="@+id/manualPortInput" style="@style/Widget.Trivox.Input" android:layout_marginTop="3dp" android:inputType="number" android:textDirection="ltr"/>
            <TextView android:id="@+id/privateKeyLabel" style="@style/Widget.Trivox.FieldLabel" android:layout_marginTop="9dp"/><EditText android:id="@+id/privateKeyInput" style="@style/Widget.Trivox.Input" android:layout_marginTop="3dp" android:textDirection="ltr"/>
            <TextView android:id="@+id/publicKeyLabel" style="@style/Widget.Trivox.FieldLabel" android:layout_marginTop="9dp" android:text="@string/wireguard_public_key"/><EditText android:id="@+id/publicKeyInput" style="@style/Widget.Trivox.Input" android:layout_marginTop="3dp" android:textDirection="ltr"/>
            <TextView android:id="@+id/preSharedKeyLabel" style="@style/Widget.Trivox.FieldLabel" android:layout_marginTop="9dp" android:text="@string/wireguard_preshared_key"/><EditText android:id="@+id/preSharedKeyInput" style="@style/Widget.Trivox.Input" android:layout_marginTop="3dp" android:textDirection="ltr"/>
            <TextView android:id="@+id/localAddressLabel" style="@style/Widget.Trivox.FieldLabel" android:layout_marginTop="9dp" android:text="@string/wireguard_local_address"/><EditText android:id="@+id/localAddressInput" style="@style/Widget.Trivox.Input" android:layout_marginTop="3dp" android:textDirection="ltr"/>
            <TextView android:id="@+id/allowedIpsLabel" style="@style/Widget.Trivox.FieldLabel" android:layout_marginTop="9dp" android:text="@string/wireguard_allowed_ips"/><EditText android:id="@+id/allowedIpsInput" style="@style/Widget.Trivox.Input" android:layout_marginTop="3dp" android:textDirection="ltr"/>
            <TextView android:id="@+id/mtuLabel" style="@style/Widget.Trivox.FieldLabel" android:layout_marginTop="9dp" android:text="@string/mtu"/><EditText android:id="@+id/manualMtuInput" style="@style/Widget.Trivox.Input" android:layout_marginTop="3dp" android:inputType="number"/>
            <TextView android:id="@+id/sniLabel" style="@style/Widget.Trivox.FieldLabel" android:layout_marginTop="9dp" android:text="@string/sni"/><EditText android:id="@+id/manualSniInput" style="@style/Widget.Trivox.Input" android:layout_marginTop="3dp" android:textDirection="ltr"/>
            <CheckBox android:id="@+id/insecureCheck" style="@style/Widget.Trivox.CheckBox" android:layout_marginTop="6dp" android:text="@string/allow_insecure"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_marginTop="7dp">
        <Button android:id="@+id/manualCancelButton" style="@style/Widget.Trivox.Button.Secondary" android:layout_width="0dp" android:layout_height="46dp" android:layout_weight="1" android:layout_marginEnd="4dp" android:text="@string/cancel"/>
        <Button android:id="@+id/manualSaveButton" style="@style/Widget.Trivox.Button.Primary" android:layout_width="0dp" android:layout_height="46dp" android:layout_weight="1" android:layout_marginStart="4dp" android:text="@string/save"/>
    </LinearLayout>
</LinearLayout>
