<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">
    <EditText
        android:id="@+id/importInput"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:gravity="top|start"
        android:hint="@string/import_hint"
        android:inputType="textMultiLine"
        android:scrollbars="vertical" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/clipboardButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/import_clipboard" />
        <Button
            android:id="@+id/fileButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/import_file" />
    </LinearLayout>
</LinearLayout>
